// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar component renders correctly when not for customer 1`] = `
<div
  className="Avatar css-1n3de40 hasImage"
  style={
    Object {
      "backgroundImage": "url(http://myurl.com/img.png)",
      "marginLeft": 0,
      "marginRight": "5px",
    }
  }
  title="Homer S."
/>
`;

exports[`Avatar component renders when no image is provided 1`] = `
<div
  className="Avatar css-1n3de40"
  style={
    Object {
      "backgroundImage": "",
      "marginLeft": 0,
      "marginRight": 0,
    }
  }
  title="Homer S."
/>
`;

exports[`Avatar component renders with image supplied 1`] = `
<div
  className="Avatar css-1n3de40 hasImage"
  style={
    Object {
      "backgroundImage": "url(http://myurl.com/img.png)",
      "marginLeft": "5px",
      "marginRight": 0,
    }
  }
  title="Homer S."
/>
`;
